syntax = "proto3";

package audit;

option go_package = "./proto;audit";

service AuditService {
  rpc CreateEvent (AuditEvent) returns (EventResponse);
}

message AuditEvent {
  message Body {
    string action = 1;
    string resource_name = 2;
    string resource_type = 3; 
    string timestamp = 4;
    string severity = 5;
    // Define the object structure for the array
    message Tag {
      string resource_name = 1;
      string resource_type = 2;
    }

    // Array of Tag objects
    repeated Tag web_resources = 6;
    string app_name = 7;
    string vendor_name = 8;
    string app_uid = 9;
  }
  Body body = 1;
}

message EventResponse {
  string status = 1;
  string message = 2;
}
